--- a/style.css
+++ b/style.css
@@ -216,3 +216,13 @@ input.invalid ~ .error-message, select.invalid ~ .error-message {
 .star.actived {
     color: #ffcc00;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    padding: 20px;
+    text-align: center;
+}
