--- a/style.css
+++ b/style.css
@@ -224,3 +224,22 @@ main {
     justify-content: center;
     text-align: center;
 }
+
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 20px;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #004080;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #003366;
+}
