--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ main {
 }
 
 
-.button {
+.submit {
     display: inline-block;
     padding: 10px 20px;
     margin-top: 20px;
@@ -240,7 +240,7 @@ main {
     transition: background-color 0.3s;
 }
 
-.button:hover {
+.submit:hover {
     background-color: #003366;
 }
 
